# Daniels_Running_Formula

./: README.md  pyproject.toml  pytest.ini
src/: __init__
src/vdot_calculator/: __init__.py  direct.py  func_module.py  pace_marathon.py  vdot_from_distance_and_pace.py  vdot_from_time_and_distance.py  vdot_from_time_and_pace.py
src/vdot_calculator/utils/: __init__.py  check_number.py  check_time.py  convert_to_minutes.py
tests/: test_exeptions.py  test_file.py  test_pace_marathon.py  test_parameters.py  test_pylint.py  test_static_analisys_softwares.py  test_vdot_from_distance_and_pace.py  test_vdot_from_time_and_distance.py  test_vdot_from_time_and_pace.py
